# proxy_getter

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: proxy_getter.podspec
ios/Classes/: ProxyGetterPlugin.swift
lib/: proxy_getter.dart
lib/src/: platform_io.dart  platform_stub.dart  proxy_getter.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
macos/: proxy_getter.podspec
macos/Classes/: ProxyGetterPlugin.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
windows/: CMakeLists.txt  proxy_getter_plugin.cpp  proxy_getter_plugin.h
windows/include/proxy_getter/: proxy_getter_plugin.h
(+2 files in other folders)
